<package format="2">
  <name>array_list</name>
  <version>1.0.0</version>
  <description>A doubly linked list implementation without pointers, based on an array.</description>

  <license>BSD</license>
  <maintainer email="cbandera@posteo.de">Claudio Bandera</maintainer>
  <author email="cbandera@posteo.de">Claudio Bandera</author>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <!-- 
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build 
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to 
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this 
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>